--- a/assts/styles.css
+++ b/assts/styles.css
@@ -937,11 +937,13 @@ body p {
   height: 500px;
   width: 600px;
   border-radius: 5px;
+  opacity: .5;
 }
 
 .project .project-content .project-container .right .project-image img:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+  opacity: 1;
 }
 
 .project .project-content .project-container .right .project-info {
@@ -1015,6 +1017,7 @@ body p {
   -webkit-transform: translateX(85px);
           transform: translateX(85px);
   text-align: left;
+  z-index: 1;
 }
 
 .project .project-content .project-container .left .project-info .project-name h3 {
@@ -1070,18 +1073,20 @@ body p {
 }
 
 .project .project-content .project-container .left .project-image:hover {
-  z-index: 1;
+  z-index: 3;
 }
 
 .project .project-content .project-container .left .project-image img {
   height: 500px;
   width: 600px;
   border-radius: 5px;
+  opacity: .7;
 }
 
 .project .project-content .project-container .left .project-image img:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+  opacity: 1;
 }
 
 @media (max-width: 1024px) {
