--- a/assts/_skill.scss
+++ b/assts/_skill.scss
@@ -64,7 +64,7 @@
 						}
 					}
 					.card-1 {
-						border-right: 1px solid $border;
+						border-right: .5px solid $border;
 						border-bottom: 1px solid $border;
 					}
 					.card-2 {
