--- a/assts/_project.scss
+++ b/assts/_project.scss
@@ -15,13 +15,13 @@
 			padding: 10px 0;
 			.project-head {
 				h1 {
+					font-size: 6rem;
 					background: -webkit-linear-gradient(#4ca1af, #c4e0e5);
   					-webkit-background-clip: text;
   					-webkit-text-fill-color: transparent;
-					font-size: 6rem;
 					letter-spacing: 1.3rem;
 					text-align: center;
-					margin-bottom: 100px;
+					margin: 100px 0;
 				}
 			}
 			.right {
@@ -35,6 +35,7 @@
 					height: 500px;
 					width: 600px;
 					border-radius: 5px;
+					
 					&:hover{
 						z-index: 3;
 					}
@@ -42,8 +43,10 @@
 						height: 500px;
 						width: 600px;
 						border-radius: 5px;
+						opacity: .5;
 						&:hover{
 							transform: scale(1.2);
+							opacity: 1;
 							
 						}
 					}
@@ -72,12 +75,12 @@
 					}
 					.project-elaments {
 						margin-bottom: 50px;
-
+						
 						a {
 							border: 1px solid rgb(54, 53, 53);
-							color: rgb(117, 108, 108);
+							color: rgb(109, 108, 117);
 							text-decoration: none;
-							font-size: 2rem;
+							font-size: 1.5rem;
 							margin-left: 10px;
 							padding: 5px 20px;
 							border-radius: 15px;
@@ -117,7 +120,7 @@
 				.project-info {
 					transform: translateX(85px);
 					text-align: left;
-					// z-index: 0;
+					z-index: 1;
 					.project-name {
 						h3 {
 							font-size: 3rem;
@@ -138,15 +141,13 @@
 						margin-bottom: 50px;
 						a {
 							border: 1px solid rgb(54, 53, 53);
-							
 							color: rgb(117, 108, 108);
 							text-decoration: none;
-							font-size: 2rem;
+							font-size: 1.5rem;
 							margin-left: 10px;
 							padding: 5px 20px;
 							border-radius: 15px;
 							cursor: default;
-							
 						}
 					}
 					.project-sources {
@@ -173,14 +174,16 @@
 				}
 				.project-image {
 					&:hover{
-						z-index: 1;
+						z-index: 3;
 					}
 					img {
 						height: 500px;
 						width: 600px;
 						border-radius: 5px;
+						opacity: .7;
 						&:hover{
 							transform: scale(1.2);
+							opacity: 1;
 							
 						}
 					}
@@ -306,6 +309,12 @@
 							box-shadow: 0 1px 8px rgba(41, 40, 40, 0.582);
 						}
 						.project-elaments{
+							height: 100px;
+							display: flex;
+							flex-direction: row;
+							justify-content: center;
+							align-items: center;
+							flex-wrap: wrap;
 							a{
 								color: rgb(114, 116, 131);
 								border: 1px solid rgb(114, 116, 131);
@@ -335,9 +344,15 @@
 							box-shadow: 0 1px 8px rgba(41, 40, 40, 0.582);
 						}
 						.project-elaments{
+							height: 100px;
+							display: flex;
+							flex-direction: row;
+							justify-content: center;
+							align-items: center;
+							flex-wrap: wrap;
 							a{
-								color: rgb(76, 77, 83);
-								border: 1px solid rgb(54, 53, 53);
+								color: rgb(114, 116, 131);
+								border: 1px solid rgb(114, 116, 131);
 							}
 						}
 					}
