--- a/assts/styles.css
+++ b/assts/styles.css
@@ -707,7 +707,7 @@ body p {
 }
 
 .skill .skill-content .skill-container .skill-card-container .skill-card-content .card-1 {
-  border-right: 1px solid #41dfca;
+  border-right: 0.5px solid #41dfca;
   border-bottom: 1px solid #41dfca;
 }
 
@@ -902,13 +902,13 @@ body p {
 }
 
 .project .project-content .project-container .project-head h1 {
+  font-size: 6rem;
   background: -webkit-linear-gradient(#4ca1af, #c4e0e5);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 6rem;
   letter-spacing: 1.3rem;
   text-align: center;
-  margin-bottom: 100px;
+  margin: 100px 0;
 }
 
 .project .project-content .project-container .right {
@@ -937,11 +937,13 @@ body p {
   height: 500px;
   width: 600px;
   border-radius: 5px;
+  opacity: .5;
 }
 
 .project .project-content .project-container .right .project-image img:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+  opacity: 1;
 }
 
 .project .project-content .project-container .right .project-info {
@@ -973,9 +975,9 @@ body p {
 
 .project .project-content .project-container .right .project-info .project-elaments a {
   border: 1px solid #363535;
-  color: #756c6c;
+  color: #6d6c75;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-left: 10px;
   padding: 5px 20px;
   border-radius: 15px;
@@ -1015,6 +1017,7 @@ body p {
   -webkit-transform: translateX(85px);
           transform: translateX(85px);
   text-align: left;
+  z-index: 1;
 }
 
 .project .project-content .project-container .left .project-info .project-name h3 {
@@ -1042,7 +1045,7 @@ body p {
   border: 1px solid #363535;
   color: #756c6c;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-left: 10px;
   padding: 5px 20px;
   border-radius: 15px;
@@ -1070,18 +1073,20 @@ body p {
 }
 
 .project .project-content .project-container .left .project-image:hover {
-  z-index: 1;
+  z-index: 3;
 }
 
 .project .project-content .project-container .left .project-image img {
   height: 500px;
   width: 600px;
   border-radius: 5px;
+  opacity: .7;
 }
 
 .project .project-content .project-container .left .project-image img:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+  opacity: 1;
 }
 
 @media (max-width: 1024px) {
@@ -1189,6 +1194,24 @@ body p {
     -webkit-box-shadow: 0 1px 8px rgba(41, 40, 40, 0.582);
             box-shadow: 0 1px 8px rgba(41, 40, 40, 0.582);
   }
+  .project .project-content .project-container .right .project-info .project-elaments {
+    height: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
   .project .project-content .project-container .right .project-info .project-elaments a {
     color: #727483;
     border: 1px solid #727483;
@@ -1228,9 +1251,27 @@ body p {
     -webkit-box-shadow: 0 1px 8px rgba(41, 40, 40, 0.582);
             box-shadow: 0 1px 8px rgba(41, 40, 40, 0.582);
   }
+  .project .project-content .project-container .left .project-info .project-elaments {
+    height: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
   .project .project-content .project-container .left .project-info .project-elaments a {
-    color: #4c4d53;
-    border: 1px solid #363535;
+    color: #727483;
+    border: 1px solid #727483;
   }
   .project .project-content .project-container .left .project-image {
     -webkit-transform: translateX(-337px);
