--- a/assts/styles.scss
+++ b/assts/styles.scss
@@ -48,3 +48,7 @@ body {
 @import './sample';
 @import './footer';
 @import './mediaQueries';
+
+// font-family: 'Do Hyeon', sans-serif;
+// font-family: 'Lato', sans-serif;
+// font-family: 'Roboto Mono', monospace;
